--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -36,7 +36,7 @@ header {
   z-index: 100;
   box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -70,7 +70,7 @@ header {
 }
 
 .searchbar input {
-  width: 250px;
+  width: 500px;
   height: 42px;
   border-radius: 50px 0 0 50px;
   background-color: var(--background-color3);
