--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -3,13 +3,8 @@
 @import url(
 "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  text-decoration: none;
-}
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
+
 :root {
   --background-color1: #fafaff;
   --background-color2: #ffffff;
@@ -20,7 +15,20 @@
   --Border-color: #3f0097;
   --one-use-color: #3f0097;
   --two-use-color: #5500cb;
+  --lore: #53cce7;
+	--dark: #2f313a;
+	--deg: -86deg;
+	--trans: all 0.4s ease 0s;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+}
+
 body {
   background-color: var(--background-color4);
   max-width: 100%;
@@ -43,7 +51,7 @@ header {
 .logo {
   font-size: 27px;
   font-weight: 600;
-  color: rgb(47, 141, 70);
+  color: var(--primary-color);
 }
 
 .icn {
@@ -53,9 +61,7 @@ header {
   cursor: pointer;
 }
 
-.searchbar,
-.message,
-.logosec {
+.searchbar {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,7 +84,9 @@ header {
   font-size: 15px;
   outline: none;
   border: none;
+  margin-bottom: 20px;
 }
+
 .searchbtn {
   width: 50px;
   height: 42px;
@@ -115,6 +123,7 @@ header {
   overflow: hidden;
 }
 .main-container {
+  background: var(--background-color4);
   display: flex;
   width: 100vw;
   position: relative;
@@ -414,4 +423,172 @@ input {
 
 .incorrect-answer {
   color: #7e1909;
+}
+
+
+.content {
+	width: 100%;
+}
+
+.team {
+	padding: 2em 0 2em 2.5em;
+	margin: 0;
+}
+
+.member {
+	margin: 0 0 2px 0;
+	padding: 0.73em;
+	background: linear-gradient(
+		83deg,
+		var(--secondary-color) 0 97%,
+		#fff0 calc(97% + 1px) 100%
+	);
+	position: relative;
+	list-style: none;
+	display: inline-block;
+	transform: scale(0.85);
+	transition: var(--trans);
+  cursor: pointer;
+}
+
+.member:nth-of-type(even) {
+	text-align: right;
+	background: linear-gradient(
+		-83deg,
+		var(--secondary-color) 0 97%,
+		#fff0 calc(97% + 1px) 100%
+	);
+}
+
+.thumb {
+	width: 13vmin;
+	height: 13vmin;
+	float: left;
+	margin-right: 1.25em;
+	background: linear-gradient(
+		var(--deg),
+		var(--dark) 0 70%,
+		var(--secondary-color) 0% 100%
+	);
+	transform: rotate(-4deg);
+	transition: var(--trans);
+	border-radius: 0.25em;
+	overflow: hidden;
+	margin-left: -3em;
+	padding: 0.5em;
+}
+
+.member:nth-of-type(even) .thumb {
+	--deg: 86deg;
+	float: right;
+	margin-left: 2em;
+	margin-right: -3em;
+	transform: rotate(4deg);
+}
+
+.thumb img {
+	width: 100%;
+	height: 100%;
+	border-radius: 0.25em;
+	filter: grayscale(1);
+	background: var(--dark);
+}
+
+.member:hover {
+	transform: scale(1);
+	transition: var(--trans);
+	filter: drop-shadow(0px 20px 10px #0008);
+}
+
+.member:hover .thumb {
+	padding: 0.1em;
+	transition: var(--trans);
+	transform: rotate(-1deg);
+	--deg: -89deg;
+}
+
+.member:nth-of-type(even):hover .thumb {
+	--deg: 91deg;
+}
+
+.member:hover .thumb img {
+	filter: none;
+	transition: var(--trans);
+}
+
+.description {
+	padding-top: 1vmin;
+}
+
+.description p {
+  color: var(--background-color1);
+	padding: 0 2em;
+	margin-bottom: 1em;
+}
+
+.content h3 {
+	display: inline;
+	transform: rotate(-2deg);
+	position: absolute;
+	margin: 0;
+	margin-top: -2.25em;
+	left: 9vmin;
+	padding: 0.5em 0.75em;
+	color: #fdf21f;
+	border-radius: 0.25em;
+	font-size: 1.35em;
+	transform-origin: left bottom;
+}
+
+.description p a {
+	display: inline-block;
+	margin: 0.5em 0 0 0;
+	background: var(--dark);
+	padding: 0.1em 0.5em 0.35em;
+	border-radius: 0.5em;
+	text-decoration: none;
+	transition: var(--trans);
+}
+.description p a:hover {
+	transition: var(--trans);
+	color: var(--dark);
+	background: var(--lore);
+	font-weight: bold;
+}
+
+.description p a img {
+	float: left;
+	width: 22px;
+	filter: invert(1);
+	border-radius: 0.15em;
+	padding: 2px;
+	background: #fff;
+	margin-right: 2px;
+}
+
+.pagination {
+  position: relative;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(3px);
+  border-radius: 2px;
+}
+.pagination li {
+  list-style-type: none;
+  display: inline-block;
+}
+.pagination li a {
+  position: relative;
+  padding: 20px 25px;
+  text-decoration: none;
+  color: #0c007d;
+  font-weight: 500;
+}
+.pagination li a:hover,
+.pagination li.active a {
+  background: rgba(74, 119, 242, 0.2);
 }
