--- a/public/css/guesscharacter.css
+++ b/public/css/guesscharacter.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: url('../images/background2.jpg') no-repeat center center/cover;
